[gd_scene load_steps=2 format=3 uid="uid://dvhenod6vrmlc"]

[ext_resource type="Script" uid="uid://cnvm4b12m2n7h" path="res://scripts/Task2_TuneResonance.gd" id="1_task2"]

[node name="Task2_TuneResonance" type="Node2D"]
script = ExtResource("1_task2")

[node name="ResonanceVisual" type="ColorRect" parent="."]
offset_left = 300.0
offset_top = 200.0
offset_right = 400.0
offset_bottom = 300.0
color = Color(1, 0.5, 0, 0.5)

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 150.0

[node name="LabelInstructions" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tune the Resonance Frequency"

[node name="LabelTimer" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Time: 12"

[node name="LabelStatus" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Accuracy: 0%"

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
